# connectai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
data/kb/: account-create.md  app-call-drops.md  app-crashes.md  auto-recharge.md  billing-dispute.md  billing-payment-methods.md  data-free-calling.md  intl-calling-quality.md  intl-calling-rates.md  intl-calling-setup.md  invoice-receipt.md  login-issues.md  password-reset.md  refund-policy.md  refund-request.md  topup-failed.md  topup-how-to.md  topup-not-received.md
eval/: testset.json
src/connectai/: __init__.py  api.py  chunking.py  cli.py  config.py  embeddings.py  eval.py  generate.py  ingest.py  observability.py  pipeline.py  rerank.py  retrieval.py  store.py
src/connectai/static/: index.html
tests/: test_chunking.py  test_eval.py  test_pipeline.py  test_retrieval.py
