[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connectai"
version = "0.1.0"
description = "RAG-driven customer-support agent for an international telecom service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tony Kus" }]
dependencies = [
    "anthropic==0.69.0",
    "chromadb==0.5.23",
    "sentence-transformers==3.3.1",
    "rank-bm25==0.2.2",
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "python-dotenv==1.0.1",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "ruff==0.8.6",
    "mypy==1.14.1",
]

[project.scripts]
connectai-ingest = "connectai.ingest:main"
connectai-eval = "connectai.eval:main"
connectai-chat = "connectai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
connectai = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
packages = ["connectai"]
mypy_path = "src"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
